<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linerlayoutlogin"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#FDD68F"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:contentDescription="Company Logo"
        android:minHeight="150dp"
        app:srcCompat="@drawable/googleg_standard_color_18" />

    <EditText
        android:id="@+id/emailTB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="15dp"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/str_email"
        android:inputType="textEmailAddress"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/passTB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/str_password"
        android:inputType="textPassword"
        android:textSize="20sp" />

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="15dp"
        android:layout_weight="1"
        android:background="#4CAF50"
        android:text="@string/str_login_name" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/googleLoginBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/forgetPassTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/str_forgetpassword_name"
        android:textAlignment="center"
        android:textColor="#0A00EC"
        android:textColorLink="#0010C5" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_weight="1"
        android:background="#428DF4" />

    <Button
        android:id="@+id/signupBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:layout_weight="1"
        android:background="#3F51B5"
        android:text="@string/str_signup_name" />

</LinearLayout>