<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".TextActivity"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textBoxTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:hint="@string/str_title_name"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textSize="24sp"
                android:textStyle="normal" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textBoxDesc"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="15dp"
                    android:autoLink="all"
                    android:background="@color/whitish_grey"
                    android:hint="@string/str_desc_name"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:textSize="22sp" />
            </com.google.android.material.textfield.TextInputLayout>

        </com.google.android.material.textfield.TextInputLayout>

        <Switch
            android:id="@+id/remindMeSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:paddingStart="30sp"
            android:paddingEnd="0sp"
            android:text="@string/str_remindMe_name"
            android:textColor="#353434"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/dateBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:ems="10"
            android:layout_marginStart="30sp"
            android:text="@string/str_date_name"
            android:textSize="20sp"
            android:onClick="datePick"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/timeBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:ems="10"
            android:layout_marginStart="30sp"
            android:text="@string/str_time_name"
            android:textSize="20sp"
            android:onClick="timePick"
            android:visibility="invisible" />

    </LinearLayout>

</ScrollView>

